# pbrt-v4

./: .gitignore  README.md  bathroom-reference-resolution384x384-sppm-kervel.v2-spp256-ppi8e6-without.direct.lights.exr  bathroom-reference-resolution384x384-sppm-kervel.v2-spp256-ppi8e6.exr  data_maker.py  justfile  runner.py  test.bat  test.exr
9.21_output/: contemporary-bathroom.exr  villa-daylight-gbuffer-volpath.exr  villa-daylight-tmp.exr  villa-daylight.exr
9.22_output/: contemporary-bathroom_sppm_spp10_ppi1000000_resolution384x384_150s.exr  contemporary-bathroom_sppm_spp10_ppi100000_resolution384x384_39.3s.exr  contemporary-bathroom_sppm_spp10_ppi250000_resolution384x384_58.7s.exr  contemporary-bathroom_sppm_spp200_resolution128x128_94.7s.exr  contemporary-bathroom_sppm_spp50_resolution384x384_216s.exr  contemporary-bathroom_sppm_spp5_ppi1000000_resolution384x384_80s.exr  contemporary-bathroom_sppm_spp5_resolution384x384_24.4s.exr  contemporary-bathroom_volpath_spp200_resolution128x128_145.8s.exr  contemporary-bathroom_volpath_spp50_resolution384x384_330s.exr  villa-daylight_sppm_spp100.exr
9.22_result/: 9.22 notes.md  bistro_vespa-pt-spp128.exr  bistro_vespa-pt.exr  bistro_vespa-sppm-spp128.exr  bistro_vespa-sppm.exr  bmw-m6-pt-spp128.exr  bmw-m6-pt.exr  bmw-m6-sppm-spp128.exr  bmw-m6-sppm.exr  book-pt.exr  book-sppm.exr  camera-1-pt.exr  camera-1-sppm.exr  contemporary-bathroom-pt-depth20.exr  crown-pt.exr  (+21 more)
data-analyzer/: .gitignore  Cargo.toml  README.md
data-analyzer/src/: data.rs  draw.rs  lib.rs  load_data.rs  main.rs  save_data.rs  utilities.rs
(+26 files in other folders)
