[package]
name = "dsc-data-analyser"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
exr = "1.73.0"
plotters = "0.3.7"

[[bin]]
name = "data-converter-1"
path = "src/bin/data_converter_1.rs"

[[bin]]
name = "data-converter-2"
path = "src/bin/data_converter_2.rs"

[[bin]]
name = "25-01-11"
path = "src/bin/25-01-11.rs"

[[bin]]
name = "mitsuba_mse_comparison"
path = "src/bin/25-01-14_mitsuba_mse_comparison.rs"

[[bin]]
name = "from_2_img_get_mse"
path = "src/bin/25-01-15_from_2_img_get_mse.rs"

[profile.release]
lto = true
